Truncating long texts in Issues list page

--- a/src/AviloxFront/src/styles/main.css
+++ b/src/AviloxFront/src/styles/main.css
@@ -1,10 +1,22 @@
-h1, h2, h3, h4, h5,
-p, font, * {
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+font,
+* {
     font-family: 'Open Sans', sans-serif;
 }
 
-h1, h2, h3, h4, h5,
-p, font, label {
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+font,
+label {
     font-family: 'Open Sans', sans-serif;
     color: lightgray;
 }
@@ -60,4 +72,11 @@ body {
 
 .navbar {
     box-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
+}
+
+.truncate {
+    width: inherit;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
